feat: establish platform runtime foundation for liuyao
Established unified analysis execution contract (AnalysisExecutionEnvelope, AnalysisExecutionService).
Introduced evidence objects and citation validation framework.
Implemented semantic validation pipeline and degradation resolver.
Added persistent ops platform including distributed rate limiting and job leasing.
Created a unified evaluation platform for prompt and RAG quality assessment.
Maintained legacy compatibility for existing services and presentation logic.
Added database migrations for audit, ops, and evaluation tables.